--- a/index.html
+++ b/index.html
@@ -5,26 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="icon" type="favicon" href="img/site-favicon.ico">
+    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
-    <script type="module" src="js/json-parser.js" defer></script>
-    <script src="js/session.js" defer></script>
-    <script src="js/document-loader.js" defer></script>
-    <script src="js/main-file.js" defer></script>
 </head>
 <body>
-    <div id="loading-container_setup" class="loading">
-        <p id="p-test">Test</p>
-        <span id="span-test">Test</span>
-    </div>
-
-    <div class="setup-button-group_1">
-        <input class="" id="" type="button" value="Button 1"></input>
-    </div>
-
-    <div class="setup-button-group_2">
-        <input class="" id="" type="button" value="Button 2"></input>
-    </div>
-
-    <input class="" type="button" id="btn-start" value="Start"></input>
+   <div id="content-container">
+        <span id="grid-item_1">Under Construction</span>
+        <span id="grid-item_2">This site is currently under construction. Please check back soon!</span>
+        <a id="grid-item_3" href="https://github.com/Symbadx37/survivalcraft-trivia">View Development Status on GitHub</a>
+   </div>
 </body>
 <html>
+
+<style>
+#content-container {
+  width: 100%;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 500px 1fr;
+  grid-template-rows: 1fr 60px 60px 40px 1fr;
+  place-items: center;
+  text-align: center;
+  font-family: "Rubik";
+}
+#grid-item_1 {
+  grid-column: 2;
+  grid-row: 2 / 2;
+  font-weight: 600;
+  font-size: 2.5rem;
+}
+#grid-item_2 {
+  grid-column: 2;
+  grid-row: 3;
+  font-weight: 400;
+  font-size: 1rem;
+}
+#grid-item_3 {
+  grid-column: 2;
+  grid-row: 4;
+  font-weight: 400;
+  font-size: 1rem;
+  color: rgb(7, 144, 7);
+}
+#grid-item_3:hover {
+  transition-duration: 0.2s;
+  color: rgba(15, 168, 21, 0.819);
+}
+</style>
