--- a/pgs/setup.html
+++ b/pgs/setup.html
@@ -11,10 +11,10 @@
     <script type="module" src="../js/parser.js" defer></script>
     <script src="../js/session.js" defer></script>
     <script src="../js/main.js" defer></script> 
-    <!-- <script src="../js/loader.js" defer></script> -->
+    <script src="../js/loader.js" defer></script>
 </head>
 <body>
-    <section class="_content-loading">
+    <section id="setup_pageContainer" class="content_loading">
       <h2>Survivalcraft Trivia</h2>
       <h3>Difficulty Tier</h3>
       <p style="font-size: 0.9rem;">Determines the average difficulty of each question.</p>
@@ -43,9 +43,9 @@
       <h3>Question Count</h3>
       <p style="font-size: 0.9rem;">Determines the total number of questions, between 10 and 30 questions.</p>
       <div id="setup_buttonGroup_3">
-        <input id="setup_lengthButton_1" class="btn-general" type="button" value="Short">
+        <input id="setup_lengthButton_1" class="btn-general" type="button" value="Easy">
         <input id="setup_lengthButton_2" class="btn-general" type="button" value="Medium">
-        <input id="setup_lengthButton_3" class="btn-general" type="button" value="Long">
+        <input id="setup_lengthButton_3" class="btn-general" type="button" value="Hard">
         <input id="setup_lengthButton_4" class="btn-general" type="button" value="Randomized">
       </div>
       <p style="font-size: 0.75rem">* Selecting <span style="color: #f11b0c">Randomized</span> will choose a random question count upon start.</p>  
@@ -53,18 +53,18 @@
       <h3>Time Limit</h3>
       <p style="font-size: 0.9rem;">Determines the amount of time allotted per question, if any.</p>
       <div id="setup_buttonGroup_4">
-        <input id="setup_durationButton_1" class="btn-general" type="button" value="Easy">
-        <input id="setup_durationButton_2" class="btn-general" type="button" value="Medium">
-        <input id="setup_durationButton_3" class="btn-general" type="button" value="Hard">
-        <input id="setup_durationButton_4" class="btn-general" type="button" value="Randomized">
+        <input id="setup_durationButton_1" class="btn-general" type="button" value="High">
+        <input id="setup_durationButton_2" class="btn-general" type="button" value="Moderate">
+        <input id="setup_durationButton_3" class="btn-general" type="button" value="Low">
+        <input id="setup_durationButton_4" class="btn-general" type="button" value="None">
+        <input id="setup_durationButton_5" class="btn-general" type="button" value="Randomized">
       </div>
-      <p style="font-size: 0.75rem">* Selecting <span style="color: #f11b0c">Randomized</span> will choose a random time limit upon start.</p>  
+      <p style="font-size: 0.75rem">* Selecting <span style="color: #f11b0c">Randomized</span> will choose a random time limit upon start.</p>
+      <h3>Start Quiz</h3>
+      <input id="setup_startButton" class="btn-general" type="button" value="Start">
+      <input id="setup_resetButton" class="btn-general" type="button" value="Reset">
+      <input id="setup_exitButton" class="btn-general" type="button" value="Exit">
     </section>
-
-    <h3>Start Quiz</h3>
-    <input id="setup_startButton" class="btn-general" type="button" value="Start">
-    <input id="setup_resetButton" class="btn-general" type="button" value="Reset">
-    <input id="setup_exitButton" class="btn-general" type="button" value="Exit">
 </body>
 <html>
 <style>
