--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -10,8 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
     <script type="module" src="../js/parser.js" defer></script>
     <script src="../js/session.js" defer></script>
-    <!-- <script src="../js/loader.js" defer></script> -->
-    <script src="../js/main.js" defer></script> 
+    <script src="../js/loader.js" defer></script>
+    <script src="../js/generate-question.js" defer></script>
+    <script src="../js/calculate-points.js" defer></script>
+    <script src="../js/main.js" defer></script>
 </head>
 <body>
     <section class="_content-loading">
@@ -70,7 +72,7 @@
 }
 #quiz_progressHeading {
   position: relative;
-  bottom: 16px;
+  bottom: 10px;
   grid-column: 2;
   grid-row: 1 / 2;
 }
