--- a/pgs/setup.html
+++ b/pgs/setup.html
@@ -12,6 +12,9 @@
     <script src="../js/session.js" defer></script>
     <script src="../js/main.js" defer></script> 
     <script src="../js/loader.js" defer></script>
+    <script src="../js/generate-question.js" defer></script>
+    <script src="../js/calculate-points.js" defer></script>
+
 </head>
 <body>
     <section id="setup_pageContainer" class="content_loading">
