--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -17,17 +17,16 @@
 </head>
 <body>
     <section class="_content-loading">
-       <!-- Primary Container -->
         <div id="quiz_mainGridContainer">
             <p id="quiz_progressHeading">Quiz Progress</p>
             <div id="quiz_progressContainer">
               <div id="quiz_progressBar"></div>
             </div>
-            <p id="quiz_questionText">Questions will appear here</p>
-            <input id="quiz_answerChoiceButton_1" class="btn-answer-choice" type="button" value="Option A">
-            <input id="quiz_answerChoiceButton_2" class="btn-answer-choice" type="button" value="Option B">
-            <input id="quiz_answerChoiceButton_3" class="btn-answer-choice" type="button" value="Option C">
-            <input id="quiz_answerChoiceButton_4" class="btn-answer-choice" type="button" value="Option D">
+            <p id="quiz_questionText"></p>
+            <input id="quiz_answerChoiceButton_1" class="btn-answer-choice btn-answer-choice-selected" type="button">
+            <input id="quiz_answerChoiceButton_2" class="btn-answer-choice" type="button">
+            <input id="quiz_answerChoiceButton_3" class="btn-answer-choice" type="button">
+            <input id="quiz_answerChoiceButton_4" class="btn-answer-choice" type="button">
             <input id="quiz_submitButton" class="btn-general" type="button" value="Submit">
             <input id="quiz_quitButton" class="btn-general" type="button" value="Quit">
         </div>
