--- a/pgs/quiz.html
+++ b/pgs/quiz.html
@@ -27,7 +27,7 @@
             <input id="quiz_answerChoiceButton_2" class="btn-answer-choice" type="button">
             <input id="quiz_answerChoiceButton_3" class="btn-answer-choice" type="button">
             <input id="quiz_answerChoiceButton_4" class="btn-answer-choice" type="button">
-            <input id="quiz_submitButton" class="btn-general" type="button" value="Submit">
+            <input id="quiz_continueButton" class="btn-general" type="button" value="Continue">
             <input id="quiz_quitButton" class="btn-general" type="button" value="Quit">
         </div>
     </section>
@@ -103,7 +103,7 @@
   grid-column: 2;
   grid-row: 7;
 }
-#quiz_submitButton {
+#quiz_continueButton {
   grid-column: 2;
   grid-row: 8;
   width: 120px;
